--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://ayank007.github.io/portfolio",
+  "homepage": "https://ayankoley.com",
   "name": "resume",
   "version": "0.1.0",
   "private": true,
